monitoring/logging-stack/overlays/local/grafana-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logging
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30300
      protocol: TCP
